💄 Created and implemented tag components

--- a/index.html
+++ b/index.html
@@ -23,5 +23,46 @@
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
   </head>
-  <body></body>
+  <body>
+    <!-- <h1>heading 1</h1>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ullam ducimus
+      error at consequuntur saepe delectus esse non, iure illum quam ipsam
+      deleniti quia magni! Earum fuga magnam fugit quod.
+    </p>
+    <a href="#"> link </a>
+    <div>
+      <input type="text" placeholder="input" />
+      <textarea name="textarea" id="textarea" cols="30" rows="10">
+text area</textarea
+      >
+      <select name="selec" id="">
+        <option value="0">select</option>
+      </select>
+      <button type="button">button</button>
+    </div>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+    <ol>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ol>
+    <dl>
+      <dt>Term</dt>
+      <dd>Description</dd>
+    </dl>
+
+    <i class="ic-star"></i> -->
+    <div class="container">
+      <strong class="tag-red"> 특가 </strong>
+      <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
+      <strong class="tag-grey"> 무료배송 </strong>
+    </div>
+  </body>
 </html>
