💄 Created and implemented star rating components

--- a/index.html
+++ b/index.html
@@ -60,9 +60,32 @@ text area</textarea
 
     <i class="ic-star"></i> -->
     <div class="container">
-      <strong class="tag-red"> 특가 </strong>
-      <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
-      <strong class="tag-grey"> 무료배송 </strong>
+      <div class="tags-test">
+        <strong class="tag-red"> 특가 </strong>
+        <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
+        <strong class="tag-grey"> 무료배송 </strong>
+      </div>
+      <div class="avatars-test">
+        <div class="avatar-24">
+          <img
+            src="https://i.pinimg.com/736x/82/49/a1/8249a1fca3c082c91010e2da258a4e91--d-design-.jpg"
+            alt="User image"
+          />
+        </div>
+        <div class="avatar-32">
+          <img
+            src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
+            alt="User image"
+          />
+        </div>
+      </div>
+      <div class="star-rating-24">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
     </div>
   </body>
 </html>
