💄 Created and implemented prices components

--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@ text area</textarea
         <i class="ic-star is-active"></i>
         <i class="ic-star is-active"></i>
       </div>
+      <div class="prices-test">
+        <div class="price-16">
+          <strong class="price-number">40000</strong>
+         <span class="price-currency">원</span>
+        </div>
+        <div class="price-20">
+          <strong class="price-number">40000</strong>
+         <span class="price-currency">원</span>
+        </div>
+        <div class="price-32">
+          <strong class="price-number">40000</strong>
+         <span class="price-currency">원</span>
+        </div>
+        <div class="price-off">
+          <strong class="price-number">40000</strong>
+         <span class="price-currency">원</span>
+        </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
