--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ text area</textarea
         <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
         <strong class="tag-grey"> 무료배송 </strong>
       </div>
+
       <div class="avatars-test">
         <div class="avatar-24">
           <img
@@ -79,6 +80,7 @@ text area</textarea
           />
         </div>
       </div>
+
       <div class="star-rating-24">
         <i class="ic-star is-active"></i>
         <i class="ic-star is-active"></i>
@@ -86,23 +88,76 @@ text area</textarea
         <i class="ic-star is-active"></i>
         <i class="ic-star is-active"></i>
       </div>
+
       <div class="prices-test">
         <div class="price-16">
           <strong class="price-number">40000</strong>
-         <span class="price-currency">원</span>
+          <span class="price-currency">원</span>
         </div>
         <div class="price-20">
           <strong class="price-number">40000</strong>
-         <span class="price-currency">원</span>
+          <span class="price-currency">원</span>
         </div>
         <div class="price-32">
           <strong class="price-number">40000</strong>
-         <span class="price-currency">원</span>
+          <span class="price-currency">원</span>
         </div>
         <div class="price-off">
           <strong class="price-number">40000</strong>
-         <span class="price-currency">원</span>
+          <span class="price-currency">원</span>
         </div>
+      </div>
+
+      <div class="buttons-test">
+        <div class="button-test-32">
+          <button type="button" class="btn-fill-primary btn-32">button</button>
+          <button type="button" class="btn-fill-secondary btn-32">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-32">button</button>
+          <button type="button" class="btn-ghost btn-32">button</button>
+        </div>
+
+        <div class="button-test-40">
+          <button type="button" class="btn-fill-primary btn-40">button</button>
+          <button type="button" class="btn-fill-secondary btn-40">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-40">button</button>
+          <button type="button" class="btn-ghost btn-40">button</button>
+        </div>
+
+        <div class="button-test-48">
+          <button type="button" class="btn-fill-primary btn-48">button</button>
+          <button type="button" class="btn-fill-secondary btn-48">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-48">button</button>
+          <button type="button" class="btn-ghost btn-48">button</button>
+        </div>
+
+        <div class="button-test-55">
+          <button type="button" class="btn-fill-primary btn-55">button</button>
+          <button type="button" class="btn-fill-secondary btn-55">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-55">button</button>
+          <button type="button" class="btn-ghost btn-55">button</button>
+        </div>
+
+        <div class="button-test-disabled">
+          <button type="button" class="btn-fill-primary btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-fill-secondary btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-ghost btn-55" disabled>
+            button
+          </button>
         </div>
       </div>
     </div>
