--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@ text area</textarea
           </button>
         </div>
       </div>
+
+      <div class="form-test">
+        <div class="select-group">
+          <select class="form-select">
+            <option value="1">option 1</option>
+            <option value="2">option 2</option>
+            <option value="3">option 3</option>
+            <option value="4">option 4</option>
+            <option value="5">option 5</option>
+          </select>
+          <i class="ic-caret"></i>
+        </div>
+        <div class="input-group">
+          <i class="ic-search" aria-hidden=""></i>
+          <input class="form-input" type="text" placeholder="스토어 검색" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
