--- a/index.html
+++ b/index.html
@@ -177,6 +177,34 @@ text area</textarea
           <input class="form-input" type="text" placeholder="스토어 검색" />
         </div>
       </div>
+
+      <div class="pagination-test">
+        <div class="pagination">
+          <button class="page-control page-prev">
+            <i class="ic-chevron"></i>
+          </button>
+          <ol class="page-list">
+            <li class="page-item is-active">
+              <a href="/">1</a>
+            </li>
+            <li class="page-item">
+              <a href="/">2</a>
+            </li>
+            <li class="page-item">
+              <a href="/">3</a>
+            </li>
+            <li class="page-item">
+              <a href="/">4</a>
+            </li>
+            <li class="page-item">
+              <a href="/">5</a>
+            </li>
+          </ol>
+          <button class="page-control page-next">
+            <i class="ic-chevron"></i>
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
