--- a/index.html
+++ b/index.html
@@ -23,188 +23,5 @@
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
   </head>
-  <body>
-    <!-- <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ullam ducimus
-      error at consequuntur saepe delectus esse non, iure illum quam ipsam
-      deleniti quia magni! Earum fuga magnam fugit quod.
-    </p>
-    <a href="#"> link </a>
-    <div>
-      <input type="text" placeholder="input" />
-      <textarea name="textarea" id="textarea" cols="30" rows="10">
-text area</textarea
-      >
-      <select name="selec" id="">
-        <option value="0">select</option>
-      </select>
-      <button type="button">button</button>
-    </div>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-    </ul>
-    <ol>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-    </ol>
-    <dl>
-      <dt>Term</dt>
-      <dd>Description</dd>
-    </dl>
-
-    <i class="ic-star"></i> -->
-    <div class="container">
-      <div class="tags-test">
-        <strong class="tag-red"> 특가 </strong>
-        <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
-        <strong class="tag-grey"> 무료배송 </strong>
-      </div>
-
-      <div class="avatars-test">
-        <div class="avatar-24">
-          <img
-            src="https://i.pinimg.com/736x/82/49/a1/8249a1fca3c082c91010e2da258a4e91--d-design-.jpg"
-            alt="User image"
-          />
-        </div>
-        <div class="avatar-32">
-          <img
-            src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
-            alt="User image"
-          />
-        </div>
-      </div>
-
-      <div class="star-rating-24">
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-      </div>
-
-      <div class="prices-test">
-        <div class="price-16">
-          <strong class="price-number">40000</strong>
-          <span class="price-currency">원</span>
-        </div>
-        <div class="price-20">
-          <strong class="price-number">40000</strong>
-          <span class="price-currency">원</span>
-        </div>
-        <div class="price-32">
-          <strong class="price-number">40000</strong>
-          <span class="price-currency">원</span>
-        </div>
-        <div class="price-off">
-          <strong class="price-number">40000</strong>
-          <span class="price-currency">원</span>
-        </div>
-      </div>
-
-      <div class="buttons-test">
-        <div class="button-test-32">
-          <button type="button" class="btn-fill-primary btn-32">button</button>
-          <button type="button" class="btn-fill-secondary btn-32">
-            button
-          </button>
-          <button type="button" class="btn-outlined btn-32">button</button>
-          <button type="button" class="btn-ghost btn-32">button</button>
-        </div>
-
-        <div class="button-test-40">
-          <button type="button" class="btn-fill-primary btn-40">button</button>
-          <button type="button" class="btn-fill-secondary btn-40">
-            button
-          </button>
-          <button type="button" class="btn-outlined btn-40">button</button>
-          <button type="button" class="btn-ghost btn-40">button</button>
-        </div>
-
-        <div class="button-test-48">
-          <button type="button" class="btn-fill-primary btn-48">button</button>
-          <button type="button" class="btn-fill-secondary btn-48">
-            button
-          </button>
-          <button type="button" class="btn-outlined btn-48">button</button>
-          <button type="button" class="btn-ghost btn-48">button</button>
-        </div>
-
-        <div class="button-test-55">
-          <button type="button" class="btn-fill-primary btn-55">button</button>
-          <button type="button" class="btn-fill-secondary btn-55">
-            button
-          </button>
-          <button type="button" class="btn-outlined btn-55">button</button>
-          <button type="button" class="btn-ghost btn-55">button</button>
-        </div>
-
-        <div class="button-test-disabled">
-          <button type="button" class="btn-fill-primary btn-55" disabled>
-            button
-          </button>
-          <button type="button" class="btn-fill-secondary btn-55" disabled>
-            button
-          </button>
-          <button type="button" class="btn-outlined btn-55" disabled>
-            button
-          </button>
-          <button type="button" class="btn-ghost btn-55" disabled>
-            button
-          </button>
-        </div>
-      </div>
-
-      <div class="form-test">
-        <div class="select-group">
-          <select class="form-select">
-            <option value="1">option 1</option>
-            <option value="2">option 2</option>
-            <option value="3">option 3</option>
-            <option value="4">option 4</option>
-            <option value="5">option 5</option>
-          </select>
-          <i class="ic-caret"></i>
-        </div>
-        <div class="input-group">
-          <i class="ic-search" aria-hidden=""></i>
-          <input class="form-input" type="text" placeholder="스토어 검색" />
-        </div>
-      </div>
-
-      <div class="pagination-test">
-        <div class="pagination">
-          <button class="page-control page-prev">
-            <i class="ic-chevron"></i>
-          </button>
-          <ol class="page-list">
-            <li class="page-item is-active">
-              <a href="/">1</a>
-            </li>
-            <li class="page-item">
-              <a href="/">2</a>
-            </li>
-            <li class="page-item">
-              <a href="/">3</a>
-            </li>
-            <li class="page-item">
-              <a href="/">4</a>
-            </li>
-            <li class="page-item">
-              <a href="/">5</a>
-            </li>
-          </ol>
-          <button class="page-control page-next">
-            <i class="ic-chevron"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
