--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </nav>
 
                 <button
-                  class="gnb-menu-button gnb-icon-button sm-only"
+                  class="gnb-icon-button is-menu sm-only"
                   type="button"
                   aria-label="메뉴 열기 버튼"
                 >
@@ -64,9 +64,9 @@
                   />
                 </div>
 
-                <div class="gnb-button-group">
+                <div class="button-group">
                   <button
-                    class="gnb-search-button gnb-icon-button lg-hidden"
+                    class="gnb-icon-button is-search lg-hidden"
                     type="button"
                     aria-label="검색 열기 버튼"
                   >
