🚧 Applied button status and created icon badge

--- a/index.html
+++ b/index.html
@@ -92,11 +92,16 @@
                   </a>
 
                   <a
-                    class="gnb-icon-button"
+                    class="gnb-icon-button is-cart"
                     href="/"
                     aria-label="장바구니로 페이지로 이동"
                   >
                     <i class="ic-cart"></i>
+                    <strong
+                      class="badge"
+                      aria-label="장바구니에 상품이 5개 담겨 있습니다"
+                      >5</strong
+                    >
                   </a>
 
                   <button
