--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                   />
                 </div>
 
+                <!-- 로그인 했을 때 -->
                 <div class="button-group">
                   <button
                     class="gnb-icon-button is-search lg-hidden"
@@ -117,6 +118,28 @@
                     </div>
                   </button>
                 </div>
+
+                <!-- 로그인 안 했을 때 -->
+                <!-- <div class="button-group">
+                  <button
+                    class="gnb-icon-button is-search lg-hidden"
+                    type="button"
+                    aria-label="검색 열기 버튼"
+                  >
+                    <i class="ic-search"></i>
+                  </button>
+                  <a
+                    class="gnb-icon-button is-cart"
+                    href="/"
+                    aria-label="장바구니로 페이지로 이동"
+                  >
+                    <i class="ic-cart"></i>
+                  </a>
+                  <div class="gnb-auth sm-hidden">
+                    <a href="/">로그인</a>
+                    <a href="/">회원가입</a>
+                  </div>
+                </div> -->
 
                 <button class="sm-hidden btn-fill-primary btn-40" type="button">
                   글쓰기
