--- a/index.html
+++ b/index.html
@@ -105,18 +105,30 @@
                     >
                   </a>
 
-                  <button
-                    class="gnb-avatar-button sm-hidden"
-                    type="button"
-                    aria-label="마이 메뉴 열기 버튼"
-                  >
-                    <div class="avatar-32">
-                      <img
-                        src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
-                        alt="User image"
-                      />
+                  <div class="my-menu">
+                    <button
+                      class="my-menu-avatar-button sm-hidden"
+                      type="button"
+                      aria-label="마이 메뉴 열기 버튼"
+                    >
+                      <div class="avatar-32">
+                        <img
+                          src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
+                          alt="User image"
+                        />
+                      </div>
+                    </button>
+                    <div class="my-menu-content">
+                      <ul class="my-menu-list">
+                        <li class="my-menu-item"><a href="/">마이페이지</a></li>
+                        <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
+                        <li class="my-menu-item"><a href="/">이벤트</a></li>
+                        <li class="my-menu-item">
+                          <button type="button">로그아웃</button>
+                        </li>
+                      </ul>
                     </div>
-                  </button>
+                  </div>
                 </div>
 
                 <!-- 로그인 안 했을 때 -->
