♿️ Improved aria-hidden attributes

--- a/components.html
+++ b/components.html
@@ -135,7 +135,7 @@ text area</textarea
       <i class="ic-caret"></i>
     </div>
     <div class="input-group">
-      <i class="ic-search" aria-hidden=""></i>
+      <i class="ic-search" aria-hidden="true"></i>
       <input class="form-input" type="text" placeholder="스토어 검색" />
     </div>
   </div>
