💄 Relocated my-menu-content and applied button status

--- a/index.html
+++ b/index.html
@@ -107,16 +107,14 @@
 
                   <div class="my-menu">
                     <button
-                      class="my-menu-avatar-button sm-hidden"
+                      class="my-menu-avatar-button is-active sm-hidden"
                       type="button"
                       aria-label="마이 메뉴 열기 버튼"
                     >
-                      <div class="avatar-32">
-                        <img
-                          src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
-                          alt="User image"
-                        />
-                      </div>
+                      <img
+                        src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
+                        alt="User image"
+                      />
                     </button>
                     <div class="my-menu-content">
                       <ul class="my-menu-list">
