🐛 Passed sm-hidden to my-menu

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                     >
                   </a>
 
-                  <div class="my-menu">
+                  <div class="my-menu sm-hidden">
                     <button
-                      class="my-menu-avatar-button is-active sm-hidden"
+                      class="my-menu-avatar-button is-active"
                       type="button"
                       aria-label="마이 메뉴 열기 버튼"
                     >
