--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       aria-label="마이 메뉴 열기 버튼"
                     >
                       <img
-                        src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
+                        src="./assets/images/img-user-01.jpg"
                         alt="User image"
                       />
                     </button>
@@ -161,5 +161,86 @@
         </div>
       </div>
     </header>
+    <aside class="sidebar sm-only">
+      <header class="sidebar-header">
+        <h1 class="logo">
+          <a href="/">
+            <img src="./assets/images/Logo.svg" alt="내일의 집" />
+          </a>
+        </h1>
+
+        <!-- NOTE: 로그인 했을 때 -->
+        <div class="sidebar-user">
+          <a href="/">
+            <div class="avatar-24">
+              <img src="./assets/images/img-user-01.jpg" alt="User image" />
+            </div>
+            <strong class="user-name"> George </strong></a
+          >
+        </div>
+
+        <!-- NOTE: 로그인 안 했을 때 -->
+        <div class="sidebar-auth">
+          <a href="/" class="btn-outlined btn-40">로그인</a>
+          <a href="/" class="btn-fill-primary btn-40">회원가입</a>
+        </div>
+      </header>
+
+      <nav class="sidebar-menu">
+        <h2 class="visually-hidden" aria-hidden="true">메뉴</h2>
+
+        <div class="sidebar-menu-dropdown">
+          <button class="sidebar-menu-dropdown-button" type="button">
+            <i class="ic-store" aria-hidden="true"></i>
+            스토어
+            <i class="ic-chevron" aria-hidden="true"></i>
+          </button>
+
+          <div class="sidebar-menu-dropdown-content">
+            <ul class="sidebar-menu-dropdown-list">
+              <li class="sidebar-menu-dropdown-list-item">
+                <a href="/">스토어홈</a>
+              </li>
+              <li class="sidebar-menu-dropdown-list-item">
+                <a href="/">카테고리</a>
+              </li>
+              <li class="sidebar-menu-dropdown-list-item">
+                <a href="/">신혼가구</a>
+              </li>
+              <li class="sidebar-menu-dropdown-list-item">
+                <a href="/">베스트</a>
+              </li>
+              <li class="sidebar-menu-dropdown-list-item">
+                <a href="/">
+                  기획전
+                  <i class="ic-new" lang="en" aria-label="New"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- NOTE: 로그인 했을 때 -->
+        <div class="sidebar-menu-my">
+          <ul class="sidebar-menu-my-list">
+            <li class="sidebar-menu-my-list-item">
+              <a href="/">마이페이지</a>
+            </li>
+            <li class="sidebar-menu-my-list-item">
+              <a href="/">나의 쇼핑</a>
+            </li>
+            <li class="sidebar-menu-my-list-item">
+              <a href="/">스크랩북</a>
+            </li>
+            <li class="sidebar-menu-my-list-item">
+              <a href="/">알림</a>
+            </li>
+            <li class="sidebar-menu-my-list-item">
+              <a href="/">이벤트 </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </aside>
   </body>
 </html>
