🚧 Created and styled sidebar and navbar

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         </div>
       </div>
     </header>
+
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
         <h1 class="logo">
@@ -175,7 +176,10 @@
             <div class="avatar-24">
               <img src="./assets/images/img-user-01.jpg" alt="User image" />
             </div>
-            <strong class="user-name"> George </strong></a
+            <strong class="user-name">
+              조지 거슈윈 조지 거슈윈 조지 거슈윈 조지 거슈윈 조지 거슈윈 조지
+              거슈윈
+            </strong></a
           >
         </div>
 
