--- a/index.html
+++ b/index.html
@@ -176,10 +176,7 @@
             <div class="avatar-24">
               <img src="./assets/images/img-user-01.jpg" alt="User image" />
             </div>
-            <strong class="user-name">
-              조지 거슈윈 조지 거슈윈 조지 거슈윈 조지 거슈윈 조지 거슈윈 조지
-              거슈윈
-            </strong></a
+            <strong class="user-name"> 조지 거슈윈 </strong></a
           >
         </div>
 
@@ -193,30 +190,108 @@
       <nav class="sidebar-menu">
         <h2 class="visually-hidden" aria-hidden="true">메뉴</h2>
 
-        <div class="sidebar-menu-dropdown">
-          <button class="sidebar-menu-dropdown-button" type="button">
+        <div class="sidebar-dropdown">
+          <button class="sidebar-dropdown-button" type="button">
+            <i class="ic-community" aria-hidden="true"></i>
+            커뮤니티
+            <i class="ic-chevron" aria-hidden="true"></i>
+          </button>
+
+          <div class="sidebar-dropdown-content">
+            <ul class="sidebar-dropdown-content-list">
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">홈</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">팔로잉</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">사진</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">집들이</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">노하우</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">전문가집들이</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">셀프가이드</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">질문과 답변 </a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">이벤트</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="sidebar-dropdown is-active is-open">
+          <button class="sidebar-dropdown-button" type="button">
             <i class="ic-store" aria-hidden="true"></i>
             스토어
             <i class="ic-chevron" aria-hidden="true"></i>
           </button>
 
-          <div class="sidebar-menu-dropdown-content">
-            <ul class="sidebar-menu-dropdown-list">
-              <li class="sidebar-menu-dropdown-list-item">
+          <div class="sidebar-dropdown-content">
+            <ul class="sidebar-dropdown-content-list">
+              <li class="sidebar-dropdown-content-list-item">
                 <a href="/">스토어홈</a>
               </li>
-              <li class="sidebar-menu-dropdown-list-item">
+              <li class="sidebar-dropdown-content-list-item">
                 <a href="/">카테고리</a>
               </li>
-              <li class="sidebar-menu-dropdown-list-item">
+              <li class="sidebar-dropdown-content-list-item">
                 <a href="/">신혼가구</a>
               </li>
-              <li class="sidebar-menu-dropdown-list-item">
+              <li class="sidebar-dropdown-content-list-item">
                 <a href="/">베스트</a>
               </li>
-              <li class="sidebar-menu-dropdown-list-item">
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">오늘의딜</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">연휴특가</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">월동준비</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">리퍼마켓</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item is-active">
                 <a href="/">
                   기획전
+                  <i class="ic-new" lang="en" aria-label="New"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="sidebar-dropdown">
+          <button class="sidebar-dropdown-button" type="button">
+            <i class="ic-expert" aria-hidden="true"></i>
+            인테리어시공
+            <i class="ic-chevron" aria-hidden="true"></i>
+          </button>
+
+          <div class="sidebar-dropdown-content">
+            <ul class="sidebar-dropdown-content-list">
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">시공업체 찾기</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">간편상담신청</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item">
+                <a href="/">견적계산</a>
+              </li>
+              <li class="sidebar-dropdown-content-list-item is-active">
+                <a href="/">
+                  셍활수리
                   <i class="ic-new" lang="en" aria-label="New"></i>
                 </a>
               </li>
