🚧 Created a dropdown menu component

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <nav class="sidebar-menu">
         <h2 class="visually-hidden" aria-hidden="true">메뉴</h2>
 
-        <div class="sidebar-dropdown">
+        <div class="sidebar-dropdown is-community">
           <button class="sidebar-dropdown-button" type="button">
             <i class="ic-community" aria-hidden="true"></i>
             커뮤니티
@@ -229,7 +229,7 @@
             </ul>
           </div>
         </div>
-        <div class="sidebar-dropdown is-active is-open">
+        <div class="sidebar-dropdown is-store is-active is-open">
           <button class="sidebar-dropdown-button" type="button">
             <i class="ic-store" aria-hidden="true"></i>
             스토어
@@ -271,7 +271,7 @@
             </ul>
           </div>
         </div>
-        <div class="sidebar-dropdown">
+        <div class="sidebar-dropdown is-expert">
           <button class="sidebar-dropdown-button" type="button">
             <i class="ic-expert" aria-hidden="true"></i>
             인테리어시공
