🍱 Updated avatar images as local images

--- a/components.html
+++ b/components.html
@@ -42,16 +42,10 @@ text area</textarea
 
   <div class="avatars-test">
     <div class="avatar-24">
-      <img
-        src="https://i.pinimg.com/736x/82/49/a1/8249a1fca3c082c91010e2da258a4e91--d-design-.jpg"
-        alt="User image"
-      />
+      <img src="./assets/images/Logo.svg" alt="User image" />
     </div>
     <div class="avatar-32">
-      <img
-        src="https://static.wikia.nocookie.net/characters/images/1/19/Sally_Fantasia.jpg"
-        alt="User image"
-      />
+      <img src="./assets/images/Logo.svg" alt="User image" />
     </div>
   </div>
 
