--- a/index.html
+++ b/index.html
@@ -322,6 +322,72 @@
       </nav>
     </aside>
 
+    <aside class="search-modal lg-hidden">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <header class="search-modal-header">
+              <h1 class="visually-hidden">검색창</h1>
+
+              <div class="search-modal-home">
+                <div class="input-group">
+                  <i class="ic-search" aria-hidden="true"></i>
+                  <input
+                    class="form-input"
+                    type="text"
+                    placeholder="스토어 검색"
+                  />
+                </div>
+              </div>
+
+              <button class="btn-ghost btn-40" type="button">취소</button>
+            </header>
+
+            <section class="search-history">
+              <header class="search-history-header">
+                <h2 class="title">최근 검색어</h2>
+                <button type="button">전체 삭제</button>
+              </header>
+
+              <!-- 최근 검색어가 있을 때 -->
+              <div class="search-history-content">
+                <ol class="search-history-list">
+                  <li class="search-history-item">
+                    <button class="word-button" type="button">카펫</button>
+                    <button
+                      class="delete-button"
+                      type="button"
+                      aria-label="검색어 삭제"
+                    >
+                      <i class="ic-close"></i>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="word-button" type="button">포스터</button>
+                    <button class="delete-button" type="button">
+                      <i class="ic-close" aria-label="검색어 삭제"></i>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="word-button" type="button">
+                      규조토 발판
+                    </button>
+                    <button class="delete-button" type="button">
+                      <i class="ic-close" aria-label="검색어 삭제"></i>
+                    </button>
+                  </li>
+                </ol>
+              </div>
+
+              <!-- 최근 검색어가 없을 때 -->
+              <div class="search-history-content">
+                <p class="placeholder">최근 검색한 내역이 없습니다.</p>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
+    </aside>
     <div class="overlay" aria-hidden="true"></div>
   </body>
 </html>
