--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <header class="search-modal-header">
               <h1 class="visually-hidden">검색창</h1>
 
-              <div class="search-modal-home">
+              <div class="search-modal-form">
                 <div class="input-group">
                   <i class="ic-search" aria-hidden="true"></i>
                   <input
@@ -338,9 +338,9 @@
                     placeholder="스토어 검색"
                   />
                 </div>
-              </div>
 
-              <button class="btn-ghost btn-40" type="button">취소</button>
+                <button class="btn-ghost btn-40" type="button">취소</button>
+              </div>
             </header>
 
             <section class="search-history">
