🚧 Created search history component

--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
                       <i class="ic-close"></i>
                     </button>
                   </li>
-                  <li>
+                  <li class="search-history-item">
                     <button class="word-button" type="button">포스터</button>
                     <button class="delete-button" type="button">
                       <i class="ic-close" aria-label="검색어 삭제"></i>
                     </button>
                   </li>
-                  <li>
+                  <li class="search-history-item">
                     <button class="word-button" type="button">
                       규조토 발판
                     </button>
