🐛 Set lg-only className to .gnb-search

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               </div>
 
               <div class="gnb-right">
-                <div class="gnb-search">
-                  <div class="input-group lg-only" aria-label="검색창 열기">
+                <div class="gnb-search lg-only">
+                  <div class="input-group" aria-label="검색창 열기">
                     <i class="ic-search" aria-hidden="true"></i>
                     <input
                       class="form-input"
@@ -430,6 +430,7 @@
         </div>
       </div>
     </aside>
+
     <div class="overlay" aria-hidden="true"></div>
   </body>
 </html>
