--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <h1 class="visually-hidden">스토어 메뉴</h1>
 
             <ul class="lnb-list">
-              <li class="lnb-list-item">
+              <li class="lnb-list-item is-active">
                 <a href="/">스토어홈</a>
               </li>
               <li class="lnb-list-item">
