--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
 
                     <section class="search-history is-active">
-                      <div class="search-history-div">
+                      <div class="search-history-header">
                         <h2 class="title">최근 검색어</h2>
                         <button type="button">전체 삭제</button>
                       </div>
@@ -260,7 +260,51 @@
       <!-- 상품 상세 페이지 본론 -->
     </main>
 
-    <footer class="global-footer"></footer>
+    <footer class="global-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h3 class="global-footer-title">고객센터</h3>
+            <i class="ic-chevron" aria-hidden="true"></i>
+            <a class="global-footer-contact" href="tel:12345678">1234-5678</a>
+            <p class="global-footer-time">
+              평일 09:00 ~ 18:00 (주말 &amp; 공휴일 제외)
+            </p>
+
+            <dl class="global-footer-detail-list">
+              <div class="global-footer-detail-item">
+                <dt>상호명</dt>
+                <dd>산독기독기야</dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>이메일</dt>
+                <dd>
+                  <address>
+                    <a href="mailto:sandokkitokki@gmail.com"
+                      >sandokkitokki@gmail.com (제휴문의)</a
+                    >
+                  </address>
+                </dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>대표이사</dt>
+                <dd>산독기</dd>
+              </div>
+              <div class="global-footer-detail-item">
+                <dt>주소</dt>
+                <dd>
+                  <address>
+                    <a href="https://sandokkitokki.com" target="_blank"
+                      >https://sandokkitokki.com</a
+                    >
+                  </address>
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
