--- a/index.html
+++ b/index.html
@@ -264,8 +264,11 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <h3 class="global-footer-title">고객센터</h3>
-            <i class="ic-chevron" aria-hidden="true"></i>
+            <h3 class="global-footer-title">
+              고객센터
+              <i class="ic-chevron" aria-hidden="true"></i>
+            </h3>
+
             <a class="global-footer-contact" href="tel:12345678">1234-5678</a>
             <p class="global-footer-time">
               평일 09:00 ~ 18:00 (주말 &amp; 공휴일 제외)
@@ -274,28 +277,28 @@
             <dl class="global-footer-detail-list">
               <div class="global-footer-detail-item">
                 <dt>상호명</dt>
-                <dd>산독기독기야</dd>
+                <dd>Yejin</dd>
               </div>
               <div class="global-footer-detail-item">
                 <dt>이메일</dt>
                 <dd>
                   <address>
-                    <a href="mailto:sandokkitokki@gmail.com"
-                      >sandokkitokki@gmail.com (제휴문의)</a
+                    <a href="mailto:hey.yejinc@gmail.com"
+                      >hey.yejinc@gmail.com (제휴문의)</a
                     >
                   </address>
                 </dd>
               </div>
               <div class="global-footer-detail-item">
                 <dt>대표이사</dt>
-                <dd>산독기</dd>
+                <dd>Yejin</dd>
               </div>
               <div class="global-footer-detail-item">
                 <dt>주소</dt>
                 <dd>
                   <address>
-                    <a href="https://sandokkitokki.com" target="_blank"
-                      >https://sandokkitokki.com</a
+                    <a href="https://yejinc.com" target="_blank"
+                      >https://yejinc.com</a
                     >
                   </address>
                 </dd>
