🚧 Imported tiny-slider.js and initialised productCarousel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
     <title>
       전기히터 &gt; 보아르 - 캠핑/가정용 400W 미니멀 전기히터 VO-HT015
       (안전장치기능탑재) ⎪ 내일의 집
@@ -22,6 +21,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="global-header">
@@ -285,7 +289,7 @@
                     <figure>
                       <img src="./assets/images/img-product-01.jpg" alt="" />
                     </figure>
-                    <figcaption class="visuaslly-hidden">
+                    <figcaption class="visually-hidden">
                       보아르 전기히터 상세 이미지 1
                     </figcaption>
                   </li>
@@ -297,7 +301,7 @@
                     <figure>
                       <img src="./assets/images/img-product-02.jpg" alt="" />
                     </figure>
-                    <figcaption class="visuaslly-hidden">
+                    <figcaption class="visually-hidden">
                       보아르 전기히터 상세 이미지 2
                     </figcaption>
                   </li>
@@ -309,7 +313,7 @@
                     <figure>
                       <img src="./assets/images/img-product-03.jpg" alt="" />
                     </figure>
-                    <figcaption class="visuaslly-hidden">
+                    <figcaption class="visually-hidden">
                       보아르 전기히터 상세 이미지 3
                     </figcaption>
                   </li>
@@ -321,7 +325,7 @@
                     <figure>
                       <img src="./assets/images/img-product-04.jpg" alt="" />
                     </figure>
-                    <figcaption class="visuaslly-hidden">
+                    <figcaption class="visually-hidden">
                       보아르 전기히터 상세 이미지 4
                     </figcaption>
                   </li>
@@ -329,7 +333,7 @@
               </div>
 
               <div class="product-carousel-thumbnail">
-                <ol class="thumnail-list" role="tablist">
+                <ol class="thumbnail-list" role="tablist">
                   <li
                     class="thumbnail-item"
                     id="product-carousel-tab-1"
@@ -663,5 +667,8 @@
     </aside>
 
     <div class="overlay" aria-hidden="true"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="./js/productCarousel.js"></script>
   </body>
 </html>
