--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
               <div class="product-info-price">
                 <div class="info-original-price">
                   <div class="discount-rate">
-                    <span>34</span>
-                    <span>%</span>
+                    <span class="rate">34</span>
+                    <span class="percent">%</span>
                   </div>
 
                   <div class="price-off">
                     <strong class="price-number">49,900</strong>
-                    <span class="price-currency">원</span>
+                    <span class="price-currency sm-hidden">원</span>
                   </div>
                 </div>
 
