💄 Created common component: product-section-header

--- a/components.html
+++ b/components.html
@@ -1,4 +1,14 @@
-<!-- <h1>heading 1</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- <h1>heading 1</h1>
     <h2>heading 2</h2>
     <h3>heading 3</h3>
     <p>
@@ -33,155 +43,201 @@ text area</textarea
     </dl>
 
     <i class="ic-star"></i> -->
-<div class="container">
-  <div class="tags-test">
-    <strong class="tag-red"> 특가 </strong>
-    <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
-    <strong class="tag-grey"> 무료배송 </strong>
-  </div>
+    <div class="container">
+      <div class="tags-test">
+        <strong class="tag-red"> 특가 </strong>
+        <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
+        <strong class="tag-grey"> 무료배송 </strong>
+      </div>
 
-  <div class="avatars-test">
-    <div class="avatar-24">
-      <img src="./assets/images/Logo.svg" alt="User image" />
-    </div>
-    <div class="avatar-32">
-      <img src="./assets/images/Logo.svg" alt="User image" />
-    </div>
-  </div>
+      <div class="avatars-test">
+        <div class="avatar-24">
+          <img src="./assets/images/img-user-01.jpg" alt="User image" />
+        </div>
+        <div class="avatar-32">
+          <img src="./assets/images/img-user-01.jpg" alt="User image" />
+        </div>
+      </div>
 
-  <div>
-    <div class="star-rating-13">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-    </div>
-    <div class="star-rating-16">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-    </div>
-    <div class="star-rating-20">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-    </div>
-    <div class="star-rating-24">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-    </div>
-  </div>
+      <div>
+        <div class="star-rating-13">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-16">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-20">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-24">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+      </div>
 
-  <div class="prices-test">
-    <div class="price-16">
-      <strong class="price-number">40000</strong>
-      <span class="price-currency">원</span>
-    </div>
-    <div class="price-20">
-      <strong class="price-number">40000</strong>
-      <span class="price-currency">원</span>
-    </div>
-    <div class="price-32">
-      <strong class="price-number">40000</strong>
-      <span class="price-currency">원</span>
-    </div>
-    <div class="price-off">
-      <strong class="price-number">40000</strong>
-      <span class="price-currency">원</span>
-    </div>
-  </div>
+      <div class="prices-test">
+        <div class="price-16">
+          <strong class="price-number">40000</strong>
+          <span class="price-currency">원</span>
+        </div>
+        <div class="price-20">
+          <strong class="price-number">40000</strong>
+          <span class="price-currency">원</span>
+        </div>
+        <div class="price-32">
+          <strong class="price-number">40000</strong>
+          <span class="price-currency">원</span>
+        </div>
+        <div class="price-off">
+          <strong class="price-number">40000</strong>
+          <span class="price-currency">원</span>
+        </div>
+      </div>
 
-  <div class="buttons-test">
-    <div class="button-test-32">
-      <button type="button" class="btn-fill-primary btn-32">button</button>
-      <button type="button" class="btn-fill-secondary btn-32">button</button>
-      <button type="button" class="btn-outlined btn-32">button</button>
-      <button type="button" class="btn-ghost btn-32">button</button>
-    </div>
+      <div class="buttons-test">
+        <div class="button-test-32">
+          <button type="button" class="btn-fill-primary btn-32">button</button>
+          <button type="button" class="btn-fill-secondary btn-32">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-32">button</button>
+          <button type="button" class="btn-ghost btn-32">button</button>
+        </div>
 
-    <div class="button-test-40">
-      <button type="button" class="btn-fill-primary btn-40">button</button>
-      <button type="button" class="btn-fill-secondary btn-40">button</button>
-      <button type="button" class="btn-outlined btn-40">button</button>
-      <button type="button" class="btn-ghost btn-40">button</button>
-    </div>
+        <div class="button-test-40">
+          <button type="button" class="btn-fill-primary btn-40">button</button>
+          <button type="button" class="btn-fill-secondary btn-40">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-40">button</button>
+          <button type="button" class="btn-ghost btn-40">button</button>
+        </div>
 
-    <div class="button-test-48">
-      <button type="button" class="btn-fill-primary btn-48">button</button>
-      <button type="button" class="btn-fill-secondary btn-48">button</button>
-      <button type="button" class="btn-outlined btn-48">button</button>
-      <button type="button" class="btn-ghost btn-48">button</button>
-    </div>
+        <div class="button-test-48">
+          <button type="button" class="btn-fill-primary btn-48">button</button>
+          <button type="button" class="btn-fill-secondary btn-48">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-48">button</button>
+          <button type="button" class="btn-ghost btn-48">button</button>
+        </div>
 
-    <div class="button-test-55">
-      <button type="button" class="btn-fill-primary btn-55">button</button>
-      <button type="button" class="btn-fill-secondary btn-55">button</button>
-      <button type="button" class="btn-outlined btn-55">button</button>
-      <button type="button" class="btn-ghost btn-55">button</button>
-    </div>
+        <div class="button-test-55">
+          <button type="button" class="btn-fill-primary btn-55">button</button>
+          <button type="button" class="btn-fill-secondary btn-55">
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-55">button</button>
+          <button type="button" class="btn-ghost btn-55">button</button>
+        </div>
 
-    <div class="button-test-disabled">
-      <button type="button" class="btn-fill-primary btn-55" disabled>
-        button
-      </button>
-      <button type="button" class="btn-fill-secondary btn-55" disabled>
-        button
-      </button>
-      <button type="button" class="btn-outlined btn-55" disabled>button</button>
-      <button type="button" class="btn-ghost btn-55" disabled>button</button>
-    </div>
-  </div>
+        <div class="button-test-disabled">
+          <button type="button" class="btn-fill-primary btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-fill-secondary btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-outlined btn-55" disabled>
+            button
+          </button>
+          <button type="button" class="btn-ghost btn-55" disabled>
+            button
+          </button>
+        </div>
+      </div>
 
-  <div class="form-test">
-    <div class="select-group">
-      <select class="form-select">
-        <option value="1">option 1</option>
-        <option value="2">option 2</option>
-        <option value="3">option 3</option>
-        <option value="4">option 4</option>
-        <option value="5">option 5</option>
-      </select>
-      <i class="ic-caret"></i>
-    </div>
-    <div class="input-group">
-      <i class="ic-search" aria-hidden="true"></i>
-      <input class="form-input" type="text" placeholder="스토어 검색" />
-    </div>
-  </div>
+      <div class="form-test">
+        <div class="select-group">
+          <select class="form-select">
+            <option value="1">option 1</option>
+            <option value="2">option 2</option>
+            <option value="3">option 3</option>
+            <option value="4">option 4</option>
+            <option value="5">option 5</option>
+          </select>
+          <i class="ic-caret"></i>
+        </div>
+        <div class="input-group">
+          <i class="ic-search" aria-hidden="true"></i>
+          <input class="form-input" type="text" placeholder="스토어 검색" />
+        </div>
+      </div>
 
-  <div class="pagination-test">
-    <div class="pagination">
-      <button class="page-control page-prev">
-        <i class="ic-chevron"></i>
-      </button>
-      <ol class="page-list">
-        <li class="page-item is-active">
-          <a href="/">1</a>
-        </li>
-        <li class="page-item">
-          <a href="/">2</a>
-        </li>
-        <li class="page-item">
-          <a href="/">3</a>
-        </li>
-        <li class="page-item">
-          <a href="/">4</a>
-        </li>
-        <li class="page-item">
-          <a href="/">5</a>
-        </li>
-      </ol>
-      <button class="page-control page-next">
-        <i class="ic-chevron"></i>
-      </button>
+      <div class="pagination-test">
+        <div class="pagination">
+          <button class="page-control page-prev">
+            <i class="ic-chevron"></i>
+          </button>
+          <ol class="page-list">
+            <li class="page-item is-active">
+              <a href="/">1</a>
+            </li>
+            <li class="page-item">
+              <a href="/">2</a>
+            </li>
+            <li class="page-item">
+              <a href="/">3</a>
+            </li>
+            <li class="page-item">
+              <a href="/">4</a>
+            </li>
+            <li class="page-item">
+              <a href="/">5</a>
+            </li>
+          </ol>
+          <button class="page-control page-next">
+            <i class="ic-chevron"></i>
+          </button>
+        </div>
+      </div>
+
+      <div>
+        <header class="product-section-header">
+          <h1 class="title">섹션타이틀</h1>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+          <a class="text-button" href="/">버튼</a>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+          <button class="icon-button" type="button" aria-label="더보기">
+            <i class="ic-chevron" aria-hidden="true"></i>
+          </button>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+          <button
+            class="icon-button is-right"
+            type="button"
+            aria-label="더보기"
+          >
+            <i class="ic-chevron" aria-hidden="true"></i>
+          </button>
+        </header>
+      </div>
     </div>
-  </div>
-</div>
+  </body>
+</html>
