💄 Created a common component: product-table

--- a/components.html
+++ b/components.html
@@ -238,6 +238,56 @@ text area</textarea
           </button>
         </header>
       </div>
+
+      <div>
+        <table class="product-table">
+          <tbody>
+            <tr>
+              <th scope="row">배송</th>
+              <td>일반택배</td>
+            </tr>
+            <tr>
+              <th scope="row">반품배송비</th>
+              <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Excepturi doloribus labore tempore assumenda minus similique
+                consectetur, cupiditate ad ab fugiat eveniet sit dolorum,
+                veritatis magnam quos molestias, veniam quam architecto.
+              </th>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae,
+                eligendi ratione ab quam totam deleniti quod explicabo, delectus
+                id labore libero adipisci vero ipsa quidem dolorum hic placeat
+                assumenda repellendus debitis dolor, sunt saepe doloremque
+                soluta deserunt. Reprehenderit obcaecati ipsa exercitationem
+                repudiandae esse accusamus omnis sint beatae, facilis tempore
+                magnam quam laudantium asperiores ipsum autem, aspernatur
+                blanditiis eaque quibusdam voluptas sapiente nisi! Ab ad quaerat
+                incidunt, natus, sapiente perferendis ut tempore quis fuga nihil
+                autem eaque! Animi nostrum similique ratione eligendi hic
+                voluptates illo architecto consectetur dolorum provident.
+                Quibusdam eaque quos enim voluptas, suscipit ex rerum in quam
+                iure dolores ea est ullam quaerat eos autem minima aspernatur
+                rem veniam? Temporibus recusandae modi doloribus sed in
+                doloremque quibusdam ipsa vel accusamus, tempore officia
+                voluptate minima veniam laudantium corporis iusto asperiores
+                mollitia repellendus, cumque magni. Reprehenderit, ut minus quod
+                modi nisi at! Nihil, nulla praesentium accusamus, quaerat sit
+                voluptatibus sunt nisi sapiente suscipit ipsam eaque iusto aut
+                ipsa asperiores non veniam. Aliquid, culpa. Distinctio minus,
+                omnis officiis repellendus numquam error cupiditate repellat
+                magnam eius autem consequatur expedita temporibus enim. Debitis,
+                maxime! Et, quos qui nesciunt est incidunt modi harum. Dolorum
+                soluta quae id fugiat ad, accusantium dolorem laborum eum
+                nesciunt exercitationem?
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
