🚧 Marking-up product-specification

--- a/index.html
+++ b/index.html
@@ -621,6 +621,74 @@
           </div>
         </div>
       </div>
+
+<section>
+  <header class="product-section-header">
+    <h1 class="title">상품 정보</h1>
+  </header>
+
+  <div>
+    <figure>
+      <img src="./assets/images/img-detail-01.jpg" alt=""></img>
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 01</figcaption>
+    </figure>
+    <figure>
+      <img src="./assets/images/img-detail-02.jpg" alt="">
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 02</figcaption>
+    </figure>
+    <figure>
+      <img src="./assets/images/img-detail-03.jpg" alt="">
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 03</figcaption>
+    </figure>
+    <figure>
+      <img src="./assets/images/img-detail-04.jpg" alt="">
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 04</figcaption>
+    </figure>
+    <figure>
+      <img src="./assets/images/img-detail-05.jpg" alt="">
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 05</figcaption>
+    </figure>
+    <figure>
+      <img src="./assets/images/img-detail-06.jpg" alt="">
+      <figcaption class="visually-hidden">보아르 전기 히터 상세 이미지 06</figcaption>
+    </figure>
+
+    <table class="product-table">
+      <tbody>
+        <tr>
+          <th scope="row">배송</th>
+          <td>일반택배</td>
+        </tr>
+        <tr>
+          <th scope="row">배송비</th>
+          <td>무료 배송</td>
+        </tr>
+        <tr>
+          <th scope="row">배송불가 지역</th>
+          <td>배송불가 지역이 없습니다</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+    <table class="product-table">
+      <tbody>
+        <tr>
+          <th scope="row">반품배송비</th>
+          <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+        </tr>
+        <tr>
+          <th scope="row">교환배송비</th>
+          <td>5,000원</td>
+        </tr>
+        <tr>
+          <th scope="row">보내실 곳</th>
+          <td>(00000) 서울 종로구 누하동</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>      
     </main>
 
     <footer class="global-footer">
