--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@
               </table>
             </div>
           </section>    
+          <div class="product-section-divider sm-only" aria-hidden="true"></div>
          </div>
        </div>
      </div>  
