📝 Left note to empty state of product-review

--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,8 @@
               </div>
             </section>
 
-            <section
+            <!-- NOTE: Review 없을 때 -->
+            <!-- <section
               class="product-section product-review"
               id="product-review"
               role="tabpanel"
@@ -1177,7 +1178,7 @@
                   최대 <strong>500P</strong>를 드립니다.
                 </p>
               </div>
-            </section>
+            </section> -->
 
             <div
               class="product-section-divider sm-only"
