🐛 Renamed user-name to username

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                           />
                         </a>
 
-                        <a class="user-name" href="/">할부로 애틋하게</a>
+                        <a class="username" href="/">할부로 애틋하게</a>
                         <span class="order">1/198</span>
                       </div>
                     </div>
