🚧 Added additional markup for user-gallery structure,images  and usernames

--- a/index.html
+++ b/index.html
@@ -635,29 +635,137 @@
               </header>
 
               <div class="product-section-content">
-                <ol class="my-slider">
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/images/img-review-01.jpg" alt="" />
-                        <figcaption class="visually-hidden"></figcaption>
-                        <!-- NOTE: 기획자님한테 확인 필요함 -->
-                      </figure>
+                <div class="user-gallery" role="region">
+                  <div class="user-gallery">
+                    <ol class="slider-list">
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
 
-                      <div class="gallery-card-detail">
-                        <a href="/" class="avatar-32">
-                          <img
-                            src="./assets/images/img-user-02.jpeg"
-                            alt="User image"
-                          />
-                        </a>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-02.jpeg"
+                                alt="User image"
+                              />
+                            </a>
 
-                        <a class="username" href="/">할부로 애틋하게</a>
-                        <span class="order">1/198</span>
-                      </div>
-                    </div>
-                  </li>
-                </ol>
+                            <a class="username" href="/">할부로 애틋하게</a>
+                            <span class="order">1/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-03.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">라이언 고슬밥</a>
+                            <span class="order">2/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-07.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">킴 가산디지털단지</a>
+                            <span class="order">3/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-08.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">모르는 개 산책</a>
+                            <span class="order">4/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-05.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-06.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">나름 전설이다</a>
+                            <span class="order">5/198</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+                  <div class="user-gallery-thumbnail"></div>
+                </div>
               </div>
             </section>
 
