✨ Marked-up order-cta

--- a/index.html
+++ b/index.html
@@ -2150,6 +2150,14 @@
           </div>
         </div>
       </div>
+
+      <div class="order-cta lg-hidden">
+        <button class="btn-ghost btn-48" type="button">
+          <i class="ic-bookmark" aria-hidden></i>
+          <span aria-label="북마크 1,011회">1,011</span>
+        </button>
+        <button class="btn-fill-primary btn-48" type="button">구매하기</button>
+      </div>
     </main>
 
     <footer class="global-footer">
